# face-sdk-python-api

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
include/: Context.h  ContextTemplate.h  FacerecService.h  ProcessingBlock.h
src/: Context.cpp  ContextTemplate.cpp  FacerecService.cpp  module.cpp
