[build-system]
requires = [
  "scikit-build-core[pyproject]",
  "numpy==1.26.4"
]
build-backend = "scikit_build_core.build"

[project]
name = "face_sdk_3divi"
version = "3.27.0"
description = "Package allows you to use FaceSDK in python language"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "", email = "" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy==1.26.4"
]

[tool.scikit-build]
sdist.include = [
  "FaceSDK/include/*.h"
]
